Fixing screen flickering issue

--- a/index.css
+++ b/index.css
@@ -425,6 +425,7 @@ li{
     }
     #image{
         width: 50%;
+        margin-top: .1em;
         align-items: center;
     }
     #content{
@@ -460,7 +461,7 @@ li{
          width: 100%;
     }
     .typewriter{
-        margin-top: 5em;
+        margin-top: 7em;
         font-size: 10px;
     }
 
